# nixnote2

./: CMakeLists.txt  README.md  changelog.txt  nixnote2.pro  themes.ini
.github/workflows/: cicd.yaml
debian/: changelog  control  copyright  rules
development/: build-dependencies-ubuntu-2004.sh  build-with-qmake.sh  deploy-on-windows.sh  run-cli-smoke-tests.sh  run-tests.sh
development/docker/: Dockerfile.ubuntu_focal
src/: global.cpp  global.h  main.cpp  nixnote.cpp  nixnote.h
src/cmdtools/: addnote.cpp  alternote.cpp  cmdlinequery.cpp  cmdlinetool.cpp  emailnote.cpp  extractnotes.cpp  extractnotetext.cpp
src/communication/: communicationmanager.cpp  communicationmanager.h
src/dialog/: aboutdialog.cpp  accountdialog.cpp  accountmaintenancedialog.cpp  adduseraccountdialog.cpp  closenotebookdialog.cpp  databasestatus.cpp  emaildialog.cpp  encryptdialog.cpp  endecryptdialog.cpp  faderdialog.cpp  htmlentitiesdialog.cpp  htmlentitiesdialog.h  insertlatexdialog.cpp  insertlinkdialog.cpp  locationdialog.cpp  logindialog.cpp  notebookproperties.cpp  notehistoryselect.cpp  noteproperties.cpp  remindersetdialog.cpp  savedsearchproperties.cpp  shortcutdialog.cpp  spellcheckdialog.cpp  tabledialog.cpp  tagproperties.cpp  watchfolderadd.cpp  watchfolderdialog.cpp
src/dialog/preferences/: appearancepreferences.cpp  emailpreferences.cpp  exitpreferences.cpp  preferencesdialog.cpp  syncpreferences.cpp  syncpreferences.h
src/email/: emailaddress.cpp  mimemessage.cpp  mimemultipart.cpp  smtpclient.cpp
src/exits/: exitmanager.cpp
src/filters/: lenseresults.h  notesortfilterproxymodel.cpp  notesortfilterproxymodel.h  remotequery.cpp  remotequery.h
src/gui/: datedelegate.cpp  externalbrowse.cpp  favoritesview.cpp  favoritesview.h  favoritesviewdelegate.cpp  findreplace.cpp  findreplace.h  flowlayout.cpp  imagedelegate.cpp  lineedit.cpp  nattributetree.cpp  nattributetree.h  nbrowserwindow.cpp  nbrowserwindow.h  nmainmenubar.cpp  nmainmenubar.h  nnotebookview.cpp  nnotebookview.h  nnotebookviewdelegate.cpp  nsearchview.cpp  nsearchview.h  ntableview.cpp  ntableviewheader.cpp  ntabwidget.cpp  ntabwidget.h  ntagview.cpp  ntagview.h  ntagviewdelegate.cpp  ntrashtree.cpp  ntrashtree.h  ntrashviewdelegate.cpp  nwebpage.cpp  nwebpage.h  nwebview.cpp  nwebview.h  shortcutkeys.cpp  shortcutkeys.h  traymenu.cpp  traymenu.h  treewidgeteditor.cpp  (+2 more)
src/gui/browserWidgets/: colormenu.cpp  dateeditor.cpp  datetimeeditor.cpp  editorbuttonbar.cpp  expandbutton.cpp  locationeditor.cpp  notebookmenubutton.cpp  ntitleeditor.cpp  ntitleeditor.h  tageditor.cpp  tageditornewtag.cpp  tagviewer.cpp  urleditor.cpp
src/gui/browserWidgets/table/: tablepropertiesdialog.cpp  tablepropertiesdialog.h
src/gui/plugins/: pluginfactory.cpp  pluginfactory.h  popplergraphicsview.cpp  popplerviewer.cpp  popplerviewer.h
src/html/: NoteFormatterBase.h  attachmenticonbuilder.cpp  enmlformatter.cpp  enmlformatter.h  htmldom.cpp  htmldom.h  noteformatter.cpp  noteformatter.h  thumbnailer.cpp  thumbnailer.h
src/hunspell/: spellchecker.cpp  spellchecker.h
src/logger/: qslogdest.cpp  qslogdest.h
src/qevercloud/: CMakeLists.txt  README.md
src/qevercloud/QEverCloud/: CMakeLists.txt
src/qevercloud/QEverCloud/cmake/modules/: QEverCloudConfig.cmake.in  QEverCloudFindQt6DependenciesCore.cmake  QEverCloudFindQt6DependenciesTranslations.cmake  QEverCloudFindQt6DependenciesWebEngineCore.cmake  QEverCloudSetupQt.cmake  QEverCloudUpdateTranslations.cmake
src/qevercloud/QEverCloud/headers/: Helpers.h  OAuth.h  Optional.h  VersionInfo.h.in
src/qevercloud/QEverCloud/src/: AsyncResult.cpp  Exceptions.cpp  Http.cpp  Printable.cpp  RequestContext.cpp  VersionInfo.cpp
src/qevercloud/QEverCloud/src/oauth/: NetworkCookieJar.cpp  NonceGenerator.cpp  OAuth.cpp  OAuthSystemBrowser.cpp
src/quentier/utility/: StringUtils.cpp  StringUtils.h  StringUtils_p.cpp
src/reminders/: remindermanager.cpp
src/settings/: accountsmanager.cpp  filemanager.cpp  filemanager.h  startupconfig.cpp  startupconfig.h
src/sql/: databaseupgrade.cpp  databaseupgrade.h  favoritestable.cpp  notebooktable.cpp  notetable.cpp  nsqlquery.cpp  nsqlquery.h  resourcetable.cpp  resourcetable.h  searchtable.cpp  tagtable.cpp  usertable.h
src/threads/: indexrunner.cpp  syncrunner.cpp  syncrunner.h
src/utilities/: crossmemorymapper.cpp  debugtool.cpp  debugtool.h  encrypt.cpp  encrypt.h  mimereference.cpp  mimereference.h  noteindexer.cpp
src/watcher/: filewatcher.cpp  filewatchermanager.cpp
src/xml/: batchimport.cpp  exportdata.cpp  importdata.cpp  importenex.cpp  xmlhighlighter.cpp
testsrc/: tests.cpp  tests.h  tests.pro
